--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
     <main>
       <!-- ========================================== -->
-      <section class="hero-page">
+      <section class="section hero-page">
         <div class="container">
           <div class="hero-container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
@@ -67,7 +67,7 @@
         </div>
       </section>
       <!-- ========================================== -->
-      <section class="features">
+      <section class="section features">
         <div class="container">
           <div class="features-container">
             <h2 class="visually-hiden" hidden>Features</h2>
@@ -105,7 +105,7 @@
         </div>
       </section>
       <!-- ========================================== -->
-      <section class="team">
+      <section class="section team">
         <div class="container">
           <div class="team-wrap">
             <h2 class="team-title">Our Team</h2>
@@ -168,7 +168,7 @@
         </div>
       </section>
       <!-- ========================================== -->
-      <section class="portfolio">
+      <section class="section portfolio">
         <div class="container">
           <div class="portfolio-wrap">
             <h2 class="portfolio-title">Our Portfolio</h2>
