--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="header-container">
+    <header class="header">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a class="header-logo" href="./index.html"
             >Web<span class="header-logo-name">Studio</span></a
@@ -57,217 +57,205 @@
     <main>
       <!-- ========================================== -->
       <section class="section hero-page">
-        <div class="container">
-          <div class="hero-container">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <div class="hero-button-wrap">
-              <button class="hero-button" type="button">Order Service</button>
-            </div>
-          </div>
+        <div class="container hero-container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
       <!-- ========================================== -->
       <section class="section features">
         <div class="container">
-          <div class="features-container">
-            <h2 class="visually-hiden" hidden>Features</h2>
-            <ul class="features-list">
-              <li class="features-item">
-                <h3 class="features-subtitle">Strategy</h3>
-                <p class="features-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li class="features-item">
-                <h3 class="features-subtitle">Punctuality</h3>
-                <p class="features-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </li>
-              <li class="features-item">
-                <h3 class="features-subtitle">Diligence</h3>
-                <p class="features-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li class="features-item">
-                <h3 class="features-subtitle">Technologies</h3>
-                <p class="features-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <h2 class="visually-hidden">Features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-subtitle">Strategy</h3>
+              <p class="features-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Punctuality</h3>
+              <p class="features-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Diligence</h3>
+              <p class="features-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-subtitle">Technologies</h3>
+              <p class="features-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- ========================================== -->
       <section class="section team">
         <div class="container">
-          <div class="team-wrap">
-            <h2 class="team-title">Our Team</h2>
-            <ul class="team-list">
-              <li class="team-item">
-                <img
-                  class="team-img"
-                  src="./images/mark-guerrero.jpg"
-                  alt="Photo of Mark Guerrero"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-description">
-                  <h3 class="team-subtitle">Mark Guerrero</h3>
-                  <p class="team-text">Product Designer</p>
-                </div>
-              </li>
-              <li class="team-item">
-                <img
-                  class="team-img"
-                  src="./images/tom-ford.jpg"
-                  alt="Photo of Tom Ford"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-description">
-                  <h3 class="team-subtitle">Tom Ford</h3>
-                  <p class="team-text">Frontend Developer</p>
-                </div>
-              </li>
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/mark-guerrero.jpg"
+                alt="Photo of Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-description">
+                <h3 class="team-subtitle">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/tom-ford.jpg"
+                alt="Photo of Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-description">
+                <h3 class="team-subtitle">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
+            </li>
 
-              <li class="team-item">
-                <img
-                  class="team-img"
-                  src="./images/camila-garcia.jpg"
-                  alt="Photo of Camila Garcia"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-description">
-                  <h3 class="team-subtitle">Camila Garcia</h3>
-                  <p class="team-text">Marketing</p>
-                </div>
-              </li>
-              <li class="team-item">
-                <img
-                  class="team-img"
-                  src="./images/daniel-wilson.jpg"
-                  alt="Photo of Daniel Wilson"
-                  width="264"
-                  height="260"
-                />
-                <div class="team-description">
-                  <h3 class="team-subtitle">Daniel Wilson</h3>
-                  <p class="team-text">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/camila-garcia.jpg"
+                alt="Photo of Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-description">
+                <h3 class="team-subtitle">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-img"
+                src="./images/daniel-wilson.jpg"
+                alt="Photo of Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-description">
+                <h3 class="team-subtitle">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- ========================================== -->
       <section class="section portfolio">
         <div class="container">
-          <div class="portfolio-wrap">
-            <h2 class="portfolio-title">Our Portfolio</h2>
-            <ul class="portfolio-list">
-              <li class="portfolio-item">
-                <img
-                  class="portfolio-img"
-                  src="./images/banking-app-img.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-description">
-                  <h3 class="portfolio-subtitle">Banking App</h3>
-                  <p class="portfolio-text">App</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  class="portfolio-img"
-                  src="./images/cashlees-payment-img.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-description">
-                  <h3 class="portfolio-subtitle">Cashless Payment</h3>
-                  <p class="portfolio-text">Marketing</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  class="portfolio-img"
-                  src="./images/meditation-app-img.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-description">
-                  <h3 class="portfolio-subtitle">Meditation App</h3>
-                  <p class="portfolio-text">App</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  class="portfolio-img"
-                  src="./images/taxi-service-img.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-description">
-                  <h3 class="portfolio-subtitle">Taxi Service</h3>
-                  <p class="portfolio-text">Marketing</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  class="portfolio-img"
-                  src="./images/screen-illustration-img.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-description">
-                  <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-                  <p class="portfolio-text">Design</p>
-                </div>
-              </li>
-              <li class="portfolio-item">
-                <img
-                  class="portfolio-img"
-                  src="./images/online-courses-img.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
-                <div class="portfolio-item-description">
-                  <h3 class="portfolio-subtitle">Online Courses</h3>
-                  <p class="portfolio-text">Marketing</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/banking-app-img.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Banking App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/cashlees-payment-img.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Cashless Payment</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/meditation-app-img.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Meditation App</h3>
+                <p class="portfolio-text">App</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/taxi-service-img.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Taxi Service</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/screen-illustration-img.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+                <p class="portfolio-text">Design</p>
+              </div>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="portfolio-img"
+                src="./images/online-courses-img.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-description">
+                <h3 class="portfolio-subtitle">Online Courses</h3>
+                <p class="portfolio-text">Marketing</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
     <!-- ========================================== -->
     <footer class="footer">
-      <div class="container">
-        <div class="footer-content">
-          <a class="footer-logo" href="./index.html"
-            >Web<span class="footer-logo-name">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+      <div class="container footer-content">
+        <a class="footer-logo" href="./index.html"
+          >Web<span class="footer-logo-name">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
